# leak-logic

./: .gitignore  .gitmodules  CMakeLists.txt
include/: leak_logic.h  leak_logic.hpp
include/leakguard/: leak_logic.hpp
src/: leak_logic.cpp
test/: test_driver.cpp
test/suites/: leak_logic_tests.hpp  serialization_tests.hpp
